[metadata]
name = UnitConverter
description = An unit converter featuring customizable features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TautvisStan/UnitConverter 
project_urls =
    Bug Tracker = https://github.com/TautvisStan/UnitConverter/issues
    Changelog = https://github.com/TautvisStan/UnitConverter/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
